--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.5.0",
-    "ytdl-core": "^4.9.0",
+    "simple-youtube-api": "^5.2.1",
+    "ytdl-core": "^4.9.1",
     "ytsearcher": "^1.2.3"
   }
 }
