--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.2.7",
-    "opusscript": "^0.0.7",
+    "opusscript": "^0.0.8",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.5.0",
     "simple-youtube-api": "^5.2.1",
-    "ytdl-core": "^4.9.1",
-    "ytsearcher": "^1.2.3"
+    "ytdl-core-discord": "^1.3.1"
   }
 }
