--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "Antimax",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/voice": "^0.14.0",
     "canvas": "^2.10.2",
-    "discord.js": "^12.5.1",
+    "discord.js": "^14.7.1",
     "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.2.7",
     "opusscript": "^0.0.8",
